[package]
name = "caffeine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "boot",
]

[dependencies]
bootloader = "0.10.12"
x86_64 = "0.14.7"
uart_16550 = "0.2.14"
spin = { version = "0.9.0", features = ["lazy"] }
font8x8 = { version = "0.3", default-features = false }
lazy_static = {version = "1.0", features = ["spin_no_std"]}

[package.metadata.bootloader]
map-framebuffer = true
framebuffer-address = 0xA0000
